# MaccyForUbuntu

./: .gitignore  Cargo.toml  README.md  test_clipboard.sh
src/: clipboard.rs  config.rs  history.rs  main.rs  tray.rs  ui.rs
